// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appends "_focused" to className if hasFocus is true 1`] = `
<button
  aria-label="red"
  className="root_focused"
  onClick={[Function]}
  style={
    Object {
      "--venia-swatch-bg": "#123123",
    }
  }
  title="red"
  type="button"
/>
`;

exports[`appends "_selected" to className if isSelected is true 1`] = `
<button
  aria-label="red"
  className="root_selected"
  onClick={[Function]}
  style={
    Object {
      "--venia-swatch-bg": "#123123",
    }
  }
  title="red"
  type="button"
/>
`;

exports[`renders a Swatch correctly 1`] = `
<button
  aria-label="red"
  className="root"
  onClick={[Function]}
  style={
    Object {
      "--venia-swatch-bg": "#123123",
    }
  }
  title="red"
  type="button"
/>
`;
